cluster/apps/flux-system/webhook/github/ingress.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: webhook-receiver
  namespace: flux-system
  annotations:
    external-dns.kubernetes.io/enabled: 'true'
    external-dns.kubernetes.io/target: ${INGRESS_DIRECT}
    external-dns.kubernetes.io/cloudflare-proxied: ${quote}${INGRESS_DEFAULT_CF_PROXY}${quote}
spec:
  parentRefs:
    - name: public
      namespace: networking
      sectionName: websecure-public
  hostnames:
    - flux-webhook.${SECRET_PUBLIC_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /hook/
      backendRefs:
        - name: webhook-receiver
          port: 80
